# giflib

./: .gitignore  CMakeLists.txt  dgif_lib.c  egif_lib.c  gif_hash.h
cmake/: gif-config.cmake
